# mastering_cpp

1_fundamental_cpp/: 1_types_libs_template  1_types_libs_template.cpp  2_conditions_loops  2_conditions_loops.cpp  3_arrays_pointers  3_arrays_pointers.cpp  4_classes  4_classes.cpp  5_STLlib  5_STLlib.cpp  6_smart_pointers  6_smart_pointers.cpp  7_lambdas_inline_typedef  7_lambdas_inline_typedef.cpp  8_concurrency  8_concurrency.cpp  9_exceptions  9_exceptions.cpp  filex  filex.cpp  library.cpp  main  main.cpp  versions.md
2_modern_cpp/1. Deducing Types/: 1 Understand template type deduction  1 Understand template type deduction.cpp  2 Understand auto type deduction  2 Understand auto type deduction.cpp  3 Understand decltype  3 Understand decltype.cpp  4 Know how to view deduced types  4 Know how to view deduced types.cpp
2_modern_cpp/2. auto/: 5 Prefer auto to explicit type declarations  5 Prefer auto to explicit type declarations.cpp  6 Use the explicitly typed initializer idiom when auto deduces undesired types  6 Use the explicitly typed initializer idiom when auto deduces undesired types.cpp
2_modern_cpp/3. Moving to Modern C++/: 10 Prefer scoped enums to unscoped enums  10 Prefer scoped enums to unscoped enums.cpp  11 Prefer deleted functions to private undefined ones  11 Prefer deleted functions to private undefined ones.cpp  12 Declare overriding functions override  12 Declare overriding functions override.cpp  13 Prefer const_iterators to iterators  (+8 more)
cpp_system/: CMakeLists.txt  README.md
cpp_system/src/: first.cpp  main.cpp
